--- a/src/assets/css/local.css
+++ b/src/assets/css/local.css
@@ -1,132 +1,4 @@
 /*-- -------------------------- -->
-<---           Pricing          -->
-<--- -------------------------- -*/
-/* Mobile - 360px */
-@media only screen and (min-width: 0rem) {
-  #pricing-1753 {
-    padding: var(--sectionPadding);
-    /* 100px - 250px */
-    background-color: #fff;
-    position: relative;
-    overflow: hidden;
-    z-index: 1;
-  }
-  #pricing-1753 .cs-container {
-    width: 100%;
-    max-width: 80rem;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    /* 48px - 64px */
-    gap: clamp(3rem, 6vw, 4rem);
-  }
-  #pricing-1753 .cs-content {
-    text-align: center;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  #pricing-1753 .cs-title {
-    margin: 0;
-    max-width: 23ch;
-  }
-  #pricing-1753 .cs-wrapper {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 3rem;
-  }
-  #pricing-1753 .cs-card-group {
-    text-align: center;
-    width: 100%;
-    padding: 0rem clamp(1rem, 2vw, 2rem);
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 1.5rem;
-  }
-  #pricing-1753 .cs-item {
-    list-style: none;
-    /* prevents padding from affecting height and width */
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 1.5rem;
-  }
-  #pricing-1753 .cs-item-wrapper {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 0.5rem;
-  }
-  #pricing-1753 .cs-h3 {
-    font-size: 1.5625rem;
-    line-height: 1.2em;
-    font-weight: 700;
-    margin: 0;
-    color: var(--headerColor);
-  }
-  #pricing-1753 .cs-package {
-    font-size: 1rem;
-    line-height: 1.2em;
-    font-weight: 700;
-    margin: 0;
-    color: var(--bodyTextColor);
-  }
-  #pricing-1753 .cs-item-text {
-    font-size: 1rem;
-    line-height: 1.5em;
-    margin: 0;
-    color: var(--bodyTextColor);
-    opacity: 0.8;
-  }
-  #pricing-1753 .cs-dark {
-    display: none;
-  }
-}
-/* Tablet - 768px */
-@media only screen and (min-width: 48rem) {
-  #pricing-1753 .cs-wrapper {
-    flex-direction: row;
-    align-items: flex-start;
-    /* 16px - 20px */
-    gap: clamp(1rem, 3vw, 1.25rem);
-  }
-}
-/* Dark Mode */
-@media only screen and (min-width: 0rem) {
-  body.dark-mode #pricing-1753 {
-    background-color: rgba(0, 0, 0, 0.6);
-  }
-  body.dark-mode #pricing-1753 .cs-title,
-  body.dark-mode #pricing-1753 .cs-h3,
-  body.dark-mode #pricing-1753 .cs-header,
-  body.dark-mode #pricing-1753 .cs-item-text,
-  body.dark-mode #pricing-1753 .cs-package {
-    color: var(--bodyTextColorWhite);
-  }
-  body.dark-mode #pricing-1753 .cs-text {
-    opacity: 0.8;
-  }
-  body.dark-mode #pricing-1753 .cs-light {
-    display: none;
-  }
-  body.dark-mode #pricing-1753 .cs-dark {
-    display: block;
-  }
-}
-/*-- -------------------------- -->
 <---      Why Choose Us         -->
 <--- -------------------------- -*/
 /* Mobile - 360px */
@@ -750,8 +622,8 @@
 }
 /* Dark Mode */
 @media only screen and (min-width: 0rem) {
-  body.dark-mode #gallery-402 .cs-topper {
-    color: var(--primaryLight);
+  body.dark-mode #gallery-402 {
+    background-color: rgba(0, 0, 0, 0.3);
   }
   body.dark-mode #gallery-402 .cs-title,
   body.dark-mode #gallery-402 .cs-text {
