--- a/src/assets/css/menu.css
+++ b/src/assets/css/menu.css
@@ -231,7 +231,7 @@
     font-size: 1.25rem;
     font-weight: 700;
     line-height: 1.2em;
-    color: var(--secondary);
+    color: var(--primary);
   }
   #collection-1602 .cs-was-price {
     font-size: 1rem;
@@ -298,7 +298,7 @@
   }
   body.dark-mode #collection-1602 .cs-item {
     background-color: var(--medium);
-    border-color: var(--accent);
+    border-color: var(--medium);
   }
 }
 /*
