--- a/src/assets/less/menu.less
+++ b/src/assets/less/menu.less
@@ -264,7 +264,7 @@
             font-size: (20/16rem);
             font-weight: 700;
             line-height: 1.2em;
-            color: var(--secondary);
+            color: var(--primary);
         }
 
         .cs-was-price {
@@ -349,7 +349,7 @@
 
             .cs-item {
                 background-color: var(--medium);
-                border-color: var(--accent);
+                border-color: var(--medium);
             }
         }
     }
