--- a/src/assets/css/local.css
+++ b/src/assets/css/local.css
@@ -720,6 +720,7 @@
   #faq-1109 .cs-button {
     /* 16px - 20px */
     font-size: clamp(1rem, 2.5vw, 1.25rem);
+    font-family: marcellus;
     line-height: 1.2em;
     text-align: left;
     font-weight: bold;
