--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -845,6 +845,7 @@
         .cs-button {
             /* 16px - 20px */
             font-size: clamp(1rem, 2.5vw, 1.25rem);
+            font-family: marcellus;
             line-height: 1.2em;
             text-align: left;
             font-weight: bold;
