--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -85,7 +85,7 @@
             position: absolute;
             height: 100%;
             width: 0%;
-            background: #000;
+            background: #5d7057;
             opacity: 1;
             top: 0;
             left: 0;
@@ -155,7 +155,7 @@
     h6 {
         margin: 0;
         color: var(--headerColor);
-        font-family: Yellowtail;
+        font-family: Marcellus;
     }
 
     p,
@@ -213,13 +213,13 @@
         src: url('/assets/fonts/lato-v24-latin-900.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
     }
 
-    /* yellowtail-regular - latin */
+    /* marcellus-regular - latin */
     @font-face {
         font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-        font-family: 'Yellowtail';
+        font-family: 'Marcellus';
         font-style: normal;
         font-weight: 400;
-        src: url('/assets/fonts/yellowtail-v23-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+        src: url('/assets/fonts/marcellus-v13-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
     }
 }
 
@@ -1283,7 +1283,7 @@ html {
 /* Mobile */
 @media only screen and (min-width: 0rem) {
     #footer {
-        background: #1c1c1c;
+        background: #081F31;
         padding: (84/16rem) 0 calc(20 / 16 * 1rem);
         font-size: ~"min(4vw, 1.2em)";
 
@@ -1525,6 +1525,334 @@ html {
     body.dark-mode {
         #footer {
             background: #061623;
+        }
+    }
+}
+
+
+
+
+/*-- -------------------------- -->
+<---        Footer 710          -->
+<--- -------------------------- -*/
+
+/* Mobile - 360px */
+@media only screen and (min-width: 0rem) {
+    #cs-footer-710 {
+        padding: var(--sectionPadding);
+        padding-bottom: (50/16rem);
+        background-color: #50624c;
+        position: relative;
+        z-index: 1;
+
+        .cs-container {
+            width: 100%;
+            max-width: (1280/16rem);
+            margin: auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .cs-logo-wrapper {
+            width: 100%;
+        }
+
+        .cs-logo {
+            width: 100%;
+            max-width: (210/16rem);
+            height: auto;
+            margin-right: auto;
+            display: block;
+
+            img {
+                width: 100%;
+                height: auto;
+            }
+        }
+
+        .cs-top {
+            width: 100%;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: flex-start;
+            /* 64px - 100px */
+            column-gap: clamp(4rem, 9vw, 6.25rem);
+            row-gap: (32/16rem);
+        }
+
+        .cs-ul {
+            margin: 0;
+            padding: 0;
+            width: auto;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            gap: (12/16rem);
+            flex: none;
+        }
+
+        .cs-contact-ul {
+            /* we remove the :before animated underline from the contact list and replace it with an underline.  The animated line doesn't work well on this section */
+            width: 100%;
+            max-width: 100%;
+            gap: (12/16rem);
+
+            .cs-link {
+                &:hover {
+                    text-decoration: underline;
+                }
+                &:before {
+                    display: none;
+                }
+            }
+        }
+
+        .cs-li {
+            list-style: none;
+            margin: 0;
+            display: block;
+        }
+
+        .cs-header {
+            font-size: (16/16rem);
+            line-height: 1.2em;
+            font-weight: 700;
+            font-family: marcellus;
+            text-transform: Uppercase;
+            margin: 0 0 (24/16rem) 0;
+            color: #fff;
+            display: block;
+        }
+
+        .cs-link {
+            /* 14px - 16px */
+            font-size: clamp(0.875rem, 1.5vw, 1rem);
+            line-height: 1.5em;
+            text-decoration: none;
+            margin: 0;
+            color: #fff;
+            display: flex;
+            justify-content: flex-start;
+            align-items: flex-start;
+            position: relative;
+
+            &:hover {
+                &:before {
+                    width: 100%;
+                }
+            }
+
+            &:before {
+                /* on hover underline */
+                content: "";
+                width: 0%;
+                height: 1px;
+                background: currentColor;
+                opacity: 1;
+                position: absolute;
+                display: block;
+                bottom: 0;
+                left: 0;
+                transition: width 0.3s;
+            }
+        }
+
+        .cs-block {
+            display: block;
+        }
+
+        .cs-icon {
+            width: (24/16rem);
+            height: auto;
+            margin: (-1/16rem) (12/16rem) 0 0;
+        }
+
+        .cs-middle {
+            width: 100%;
+            /* changes at tablet */
+            max-width: (450/16rem);
+            /* 60px - 100px */
+            margin: clamp(3.75rem, 8vw, 6.25rem) 0 0 0;
+            /* 24px - 40px */
+            padding-bottom: clamp(1.25rem, 5vw, 2.5rem);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: (24/16rem);
+        }
+
+        .cs-nav {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            column-gap: (40/16rem);
+            row-gap: (8/16rem);
+        }
+
+        .cs-nav-li {
+            list-style: none;
+        }
+
+        .cs-nav-link {
+            /* 14px - 16px */
+            font-size: clamp(0.875rem, 1.5vw, 1rem);
+            line-height: 1.5em;
+            text-decoration: none;
+            margin: 0;
+            color: var(--bodyTextColorWhite);
+            position: relative;
+
+            &:hover {
+                &:before {
+                    width: 100%;
+                }
+            }
+
+            &:before {
+                /* on hover underline */
+                content: "";
+                width: 0%;
+                height: 1px;
+                background: currentColor;
+                opacity: 1;
+                position: absolute;
+                display: block;
+                bottom: 0;
+                left: 0;
+                transition: width 0.3s;
+            }
+        }
+
+        .cs-social {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: (8/16rem);
+        }
+
+        .cs-social-li {
+            list-style: none;
+        }
+
+        .cs-social-link {
+            width: (32/16rem);
+            height: (32/16rem);
+            background-color: transparent;
+            border: 1px solid #f7f7f7;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transition: background-color 0.3s;
+        }
+
+        .cs-social-icon {
+            width: (12/16rem);
+            height: auto;
+            display: block;
+        }
+
+        .cs-hover {
+            display: none;
+        }
+
+        .cs-bottom {
+            width: 100%;
+            margin: 0;
+            /* 24px - 40px, matches the cs-middle padding bottom */
+            padding: clamp(1.25rem, 5vw, 2.5rem) 0 0 0;
+            border-top: 1px solid rgba(186, 186, 186, 0.2);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .cs-copyright {
+            /* 14px - 16px */
+            font-size: clamp(0.875rem, 1.5vw, 1rem);
+            line-height: 1.5em;
+            text-align: center;
+            width: 70%;
+            margin: 0;
+            color: var(--bodyTextColorWhite);
+            display: block;
+        }
+
+        .cs-copyright-link {
+            font-size: inherit;
+            line-height: inherit;
+            text-decoration: none;
+            font-family: marcellus;
+            text-transform: Uppercase;
+            margin: 0;
+            color: inherit;
+            display: inline-block;
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+
+        .cs-graphic {
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            /* makes it act like a background image */
+            object-fit: cover;
+            position: absolute;
+            z-index: -1;
+        }
+    }
+}
+
+/* inbetween - 600px */
+@media only screen and (min-width: 37.5rem) {
+    #cs-footer-710 {
+        .cs-top {
+            justify-content: flex-end;
+        }
+
+        .cs-ul {
+            width: auto;
+        }
+
+        .cs-contact-ul {
+            width: (240/16rem);
+        }
+    }
+}
+
+/* Tablet - 768px */
+@media only screen and (min-width: 48rem) {
+    #cs-footer-710 {
+        .cs-top {
+            flex-wrap: nowrap;
+        }
+
+        .cs-logo-wrapper {
+            width: auto;
+            margin-right: auto;
+        }
+
+        .cs-middle {
+            max-width: 100%;
+        }
+    }
+}
+
+/* Small Desktop 1024px */
+@media only screen and (min-width: 64rem) {
+    #cs-footer-710 {
+        .cs-middle {
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
         }
     }
 }
