--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -61,7 +61,7 @@
                     </a>
                 </li>
                 <li class="cs-li">
-                    <a href="" class="cs-link" target="_blank" rel="noopener">
+                    <a href="{{client.address.mapLink}}" class="cs-link" target="_blank" rel="noopener">
                         <img class="cs-icon" src="/assets/svgs/pin-w.svg" alt="icon" loading="lazy" decoding="async" width="24" height="24" aria-hidden="true">
                         {{client.address.lineOne}}<br>
                         {{client.address.lineTwo}}<br>
