--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -38,7 +38,7 @@
                     <a href="/all-day-menu/" class="cs-link">All Day</a>
                 </li>
                 <li class="cs-li">
-                    <a href="/" class="cs-link">Lunch</a>
+                    <a href="/pdfs/lunch.pdf" target="_blank" rel="noopener" class="cs-link">Lunch</a>
                 </li>
             </ul>
             <ul class="cs-ul cs-contact-ul">
