blog and new menu

--- a/src/assets/less/blog.less
+++ b/src/assets/less/blog.less
@@ -345,7 +345,7 @@
             display: inline-block;
             border-radius: (4/16rem);
             margin: auto;
-            background-color: var(--headerColor);
+            background-color: var(--primary);
             min-width: (150/16rem);
             /* prevents padding from adding to the width */
             box-sizing: border-box;
@@ -367,7 +367,7 @@
                 left: 0;
                 content: "";
                 opacity: 0;
-                border: 1px solid var(--headerColor);
+                border: 1px solid var(--primary);
                 border-radius: (4/16rem);
                 background: #fff;
                 height: 100%;
@@ -377,7 +377,7 @@
             }
 
             &:hover {
-                color: var(--headerColor);
+                color: var(--primary);
                 &:before {
                     opacity: 1;
                 }
