--- a/src/assets/css/blog.css
+++ b/src/assets/css/blog.css
@@ -305,7 +305,7 @@
     display: inline-block;
     border-radius: 0.25rem;
     margin: auto;
-    background-color: var(--headerColor);
+    background-color: var(--primary);
     min-width: 9.375rem;
     /* prevents padding from adding to the width */
     box-sizing: border-box;
@@ -326,7 +326,7 @@
     left: 0;
     content: "";
     opacity: 0;
-    border: 1px solid var(--headerColor);
+    border: 1px solid var(--primary);
     border-radius: 0.25rem;
     background: #fff;
     height: 100%;
@@ -335,7 +335,7 @@
     transition: opacity 0.3s;
   }
   .recent-articles .blog-link:hover {
-    color: var(--headerColor);
+    color: var(--primary);
   }
   .recent-articles .blog-link:hover:before {
     opacity: 1;
