--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -27,7 +27,10 @@
                     <a href="/reviews/" class="cs-link">Reviews</a>
                 </li>
                  <li class="cs-li">
-                    <a href="/contact/" class="cs-link">Contact</a>
+                    <a href="/contact/" class="cs-link">Contact</a>  
+                </li>
+                 <li class="cs-li">
+                    <a href="{{client.onlineBooking}}" target="_blank" rel="noopener" class="cs-link">Reservations</a>  
                 </li>
             </ul>
             <ul class="cs-ul">
@@ -38,7 +41,10 @@
                     <a href="/all-day-menu/" class="cs-link">All Day</a>
                 </li>
                 <li class="cs-li">
-                    <a href="/pdfs/lunch.pdf" target="_blank" rel="noopener" class="cs-link">Lunch</a>
+                    <a href="/all-day-menu/" class="cs-link">Recommended</a>
+                </li>
+                <li class="cs-li">
+                    <a href="https://storage.googleapis.com/msgsndr/vCcvptsubXYzyOBXTQmC/media/67e03e6f9643c169015b715a.pdf" target="_blank" rel="noopener" class="cs-link">Lunch</a>
                 </li>
             </ul>
             <ul class="cs-ul cs-contact-ul">
