--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -78,6 +78,11 @@
                         {% endif %}
                     </li>
                 {% endfor %}
+                <li class="cs-li">
+                        <a href="" class="cs-li-link">
+                            Gift Vouchers
+                        </a>
+                </li>
             </ul>
         </div>
         </nav>
