--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -79,7 +79,7 @@
                     </li>
                 {% endfor %}
                 <li class="cs-li">
-                        <a href="" class="cs-li-link">
+                        <a href="/" class="cs-li-link">
                             Gift Vouchers
                         </a>
                 </li>
