--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -78,11 +78,11 @@
                         {% endif %}
                     </li>
                 {% endfor %}
-                <li class="cs-li">
+                <!--<li class="cs-li">
                         <a href="/" class="cs-li-link">
                             Gift Vouchers
                         </a>
-                </li>
+                </li>-->
             </ul>
         </div>
         </nav>
